--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
   "scripts": {
     "build": "webpack -d --watch"
   },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./node_modules/jest-enzyme/lib/index.js"
+    ],
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils",
+      "<rootDir>/node_modules/fbjs"
+    ]
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1",
@@ -23,6 +35,7 @@
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.6",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
@@ -34,13 +47,10 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^24.9.0",
+    "jest-cli": "^24.9.0",
     "jest-enzyme": "^7.1.0",
+    "react-addons-test-utils": "^15.6.2",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
-  },
-  "jest": {
-    "setupFilesAfterEnv": [
-      "./node_modules/jest-enzyme/lib/index.js"
-    ]
   }
 }
