--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-eslint": "^10.0.2",
     "express": "^4.17.1",
     "mongoose": "^5.6.10",
     "react": "^16.9.0",
