--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "build": "webpack -d --watch"
+    "build": "webpack -d --watch",
+    "test": "jest"
   },
   "jest": {
     "setupFilesAfterEnv": [
