--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.10",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
