--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "express": "^4.17.1",
+    "fetch-mock": "^7.3.9",
     "mongoose": "^5.6.10",
+    "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2"
   },
