--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
+    "cors": "^2.8.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "express": "^4.17.1",
     "fetch-mock": "^7.3.9",
     "mongoose": "^5.6.10",
+    "morgan": "^1.9.1",
     "node-fetch": "^2.6.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
