--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "webpack -d --watch",
     "test": "jest",
-    "seed": "node ./database/database.js"
+    "seed": "node ./database/database.js",
+    "start": "node ./server/server.js"
   },
   "jest": {
     "setupFilesAfterEnv": [
@@ -20,6 +21,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "babel-eslint": "^10.0.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
